将标签动画效果的标签之间不重叠且相切功能实现

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -41,10 +41,12 @@
 			<div class="userimg">
 				<img id="topic_img" src="" onclick="openHomePage()" />
 			</div>
+			
 		</div>
+		
 		<!-- CP容器的HTLM标范,不要删,用于css调试 
 		<div id="cp-container" style="position:fixed; top:150px; height:200px;">-->
-		<div id="cp-container" style="position:fixed; top:150px; height:70%;width:100%;overflow-y:auto;">
+		<div id="cp-container" style=" position:fixed;  margin-top:190px;  height:60%; width:100%;overflow-x:hidden;">
 			<!-- <div class="cp" id="cpid1" class="selected">CP111111111	</div>-->
 			<!-- <div class="cp" id="cpid2" class="unselected">CP2222222222			</div>-->
 			<!-- <div class="cp" id="cpid3" class="unselected">CP3333333			</div>-->
