--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -44,16 +44,23 @@
 			
 		</div>
 		
-		<!-- CP容器的HTLM标范,不要删,用于css调试 
-		<div id="cp-container" style="position:fixed; top:150px; height:200px;">-->
-		<div id="cp-container" style=" position:fixed;  margin-top:190px;  height:60%; width:100%;overflow-x:hidden;">
+		<!-- CP容器的HTLM标范,不要删,用于css调试 -->
+		<div id="cp-show" style="position:fixed; top:150px;height:60%; width:100%;overflow-x:hidden;">
+		<div id="cp-container" style="/*  position:fixed; */ width:100%;">
 			<!-- <div class="cp" id="cpid1" class="selected">CP111111111	</div>-->
 			<!-- <div class="cp" id="cpid2" class="unselected">CP2222222222			</div>-->
 			<!-- <div class="cp" id="cpid3" class="unselected">CP3333333			</div>-->
 		</div> <!-- END of CP容器的HTLM标范,不要删,用于css调试 -->
 		
+		<div style="width:100%;height:23%;"></div>
 		<!-- start: 叶夷  2017.06.15  添加一个按钮，点击后通过已定义的接口向后台请求一组标签，后台返回后将标签显示出来。点击后继续请求下一页。-->
-		<button id="test" type="button" onclick="requestCP(userId,requestCPNum,(requestCPNum*(currentRequestedCPPage++)))" style="position:fixed; top:580px;left:300px;">请求标签</button>
+		<button id="request_cp" type="button" onclick="requestCP(userId,requestCPNum,(requestCPNum*(currentRequestedCPPage++)))" style="width:100%;">请求标签</button>
+		<!-- end: 叶夷  -->
+		</div>
+		
+		<!-- 这是标签可以排列的时候的按钮放置点 -->
+		<!-- start: 叶夷  2017.06.15  添加一个按钮，点击后通过已定义的接口向后台请求一组标签，后台返回后将标签显示出来。点击后继续请求下一页。
+		<button id="request_cp" type="button" onclick="requestCP(userId,requestCPNum,(requestCPNum*(currentRequestedCPPage++)))" style="position:fixed;top:120px;">请求标签</button>-->
 		<!-- end: 叶夷  -->
 		
 	</div> <!--End of <div id="showatloaded" class="showatloaded"> -->
