--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -51,7 +51,7 @@
 		</div> <!-- END of CP容器的HTLM标范,不要删,用于css调试 -->
 		
 		<!-- start: 叶夷  2017.06.15  添加一个按钮，点击后通过已定义的接口向后台请求一组标签，后台返回后将标签显示出来。点击后继续请求下一页。-->
-		<button id="test" type="button" onclick="requestCP(userId,requestCPNum,(requestCPNum*(currentRequestedCPPage++)))" style="position:fixed; top:580px;left:300px;">请求标签</button>
+		<button id="test" type="button" onclick="requestCP(requestCPNum,(requestCPNum*(currentRequestedCPPage++)))" style="position:fixed; top:580px;left:300px;">请求标签</button>
 		<!-- end: 叶夷  -->
 		
 	</div> <!--End of <div id="showatloaded" class="showatloaded"> -->
@@ -102,7 +102,7 @@
 			
 			//叶夷 2017.06.15  我觉得这里应该是++才能体现出这个次数的效果
 			//requestCP(userId,requestCPNum,currentRequestedCPPage+1);
-			requestCP(userId,requestCPNum,currentRequestedCPPage++);
+			requestCP(requestCPNum,currentRequestedCPPage++);
 			
 			//$("#account").show();
 		}
