合并之后的一些微调

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -115,6 +115,7 @@
 			
 			//叶夷 2017.06.15  我觉得这里应该是++才能体现出这个次数的效果
 			//requestCP(userId,requestCPNum,currentRequestedCPPage+1);
+			requestCP(userId,requestCPNum,++currentRequestedCPPage);
 			
 			//2017.07.04  叶夷  
 			//addMPData();//匹配人列表测试
