聊天页部分实现，后端代写些许修改

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -44,8 +44,8 @@
 			
 		</div>
 		
-		<!--2017.07.04  叶夷   匹配人列表变换测试按钮
-		<button id="request_cp" type="button" onclick="addMPData()" style="width:100%;position:absolute;top:150px">匹配人更新</button> -->
+		<!--2017.07.19  叶夷  聊天按钮-->
+		<button id="request_cp" type="button" onclick="dialogStart()" style="width:100%;position:absolute;top:150px">聊天</button> 
 		
 		<!-- CP容器的HTLM标范,不要删,用于css调试 -->
 		<div id="cp-show" style="position:fixed; top:230px;height:60%; width:100%;overflow-x:hidden;">
