--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -45,7 +45,10 @@
 		</div>
 		
 		<!--2017.07.19  叶夷  聊天按钮-->
-		<button id="request_cp" type="button" onclick="dialogStart()" style="width:100%;position:absolute;top:150px">聊天</button> 
+		<button type="button" onclick="enterDialogPage()" style="width:100%;position:absolute;top:150px">聊天</button> 
+		
+		<!--2017.07.26  叶夷  聊天列表-->
+		<button type="button" onclick="EnterdialogList()" style="width:100%;position:absolute;top:175px">聊天列表页</button> 
 		
 		<!-- CP容器的HTLM标范,不要删,用于css调试 -->
 		<div id="cp-show" style="position:fixed; top:230px;height:60%; width:100%;overflow-x:hidden;">
