--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -8,9 +8,10 @@
 		<title>话题列表页</title>
 		<link rel="stylesheet" type="text/css" href="topics_page.css"/>
 		<link rel="stylesheet" type="text/css" href="topics_page_web.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/popup.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/common_web.css"/>
 		<link rel="stylesheet" type="text/css" href="alter_userimage.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/popup.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/popcontext.css"/>
 
 		<!--让输入框的提示字颜色变淡-->
 		<style>
@@ -50,6 +51,9 @@
 		<!--2017.07.26  叶夷  聊天列表-->
 		<button type="button" onclick="EnterdialogList()" style="width:100%;position:absolute;top:175px">聊天列表页</button> 
 		
+		<!--2017.07.27  叶夷  添加标签按钮-->
+		<button type="button" onclick="addTag()" style="width:100%;position:absolute;top:200px">添加标签按钮</button> 
+		
 		<!-- CP容器的HTLM标范,不要删,用于css调试 -->
 		<div id="cp-show" style="position:fixed; top:230px;height:60%; width:100%;overflow-x:hidden;">
 		<div id="cp-container" style="/*  position:fixed; */ width:100%;">
@@ -78,6 +82,9 @@
 	<script type="text/javascript" src="../script/popup.js"></script>
 	<script type="text/javascript" src="topics_page.js"></script>
 	<script type="text/javascript" src="topics_page_web.js"></script>
+	<script type="text/javascript" src="../script/popup.js"></script>
+	<script type="text/javascript" src="../script/popcontext.js"></script>
+	
 	<script type="text/javascript">
 		var userId;
 		//var unionid;//第三方原生ID
@@ -189,6 +196,6 @@
 			//unionid = userinfoObj.unionid;
 			//topicList = Parameter.topiclist;
 		}
-
+		
 	</script>
 </html>
