加上了匹配人列表详细信息页的框架

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -52,7 +52,10 @@
 		<button type="button" onclick="EnterdialogList()" style="width:100%;position:absolute;top:175px">聊天列表页</button> 
 		
 		<!--2017.07.27  叶夷  添加标签按钮-->
-		<button type="button" onclick="addTag()" style="width:100%;position:absolute;top:200px">添加标签按钮</button> 
+		<button type="button" onclick="addTag()" style="width:100%;position:absolute;top:200px">添加标签按钮</button>
+		
+		<!--2017.08.07  叶夷  匹配人列表-->
+		<button type="button" onclick="enterMatchUsersPage()" style="width:100%;position:absolute;top:125px">匹配人列表</button>  
 		
 		<!-- CP容器的HTLM标范,不要删,用于css调试 -->
 		<div id="cp-show" style="position:fixed; top:230px;height:60%; width:100%;overflow-x:hidden;">
