--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -27,54 +27,78 @@
 
 	<div id="showatloaded" class="showatloaded">
 
-		<div id="search-container" class="search-container">
-			<div id="showonlineoffline">
-				<img src="../image/signal-gray.png" onclick="wsConnect()">
-			</div>
-			<div id="showouseroprate">
-				<img src="../image/exit.png" onclick="logOff()">
-			</div>
-		</div>
-
-		<!--提问分享块-->
-		<div class="topic_top">
-			<!--头像-->
-			<div class="userimg">
-				<img id="topic_img" src="" onclick="openHomePage()" />
+		<div id="top-container" class="top-container">
+			<div class="header-container">
+				<!--头像-->
+				<div class="userimg">
+					<img id="topic_img" src="" onclick="openHomePage()" />
+				</div>
+				
+				<!-- 名字 -->
+				<div class="webname">
+				wolf
+				</div>
+				<!-- 信号 -->
+				<div id="showonlineoffline">
+					<img src="../image/signal-gray.png" onclick="wsConnect()">
+				</div>
+				<!-- 重新登录-->
+				<div id="showouseroprate">
+					<img src="../image/exit.png" onclick="logOff()">
+				</div>
 			</div>
 			
+			<!-- 我的标签 -->
+			<div class="mytag-container" id="mytag-container">
+				<div class="addtagimg" onclick="addTag()"><img src="../image/add_tag.png"></div>
+				<!--  <div class="mytag"><img src="../image/acclaim-50x173.png"><span>90后</span></div>-->
+			</div>
 		</div>
 		
-		<!--2017.07.19  叶夷  聊天按钮-->
-		<button type="button" onclick="enterDialogPage()" style="width:100%;position:absolute;top:150px">聊天</button> 
+		<!--2017.07.19  叶夷  聊天按钮
+		<button type="button" onclick="enterDialogPage()" style="width:100%;position:absolute;top:150px">聊天</button> -->
 		
-		<!--2017.07.26  叶夷  聊天列表-->
-		<button type="button" onclick="EnterdialogList()" style="width:100%;position:absolute;top:175px">聊天列表页</button> 
+		<!--2017.07.26  叶夷  聊天列表
+		<button type="button" onclick="EnterdialogList()" style="width:100%;position:absolute;top:175px">聊天列表页</button> -->
 		
-		<!--2017.07.27  叶夷  添加标签按钮-->
-		<button type="button" onclick="addTag()" style="width:100%;position:absolute;top:200px">添加标签按钮</button>
+		<!--2017.07.27  叶夷  添加标签按钮
+		<button type="button" onclick="addTag()" style="width:100%;position:absolute;top:200px">添加标签按钮</button>-->
 		
-		<!--2017.08.07  叶夷  匹配人列表-->
-		<button type="button" onclick="enterMatchUsersPage()" style="width:100%;position:absolute;top:125px">匹配人列表</button>  
+		<!--2017.08.07  叶夷  匹配人列表
+		<button type="button" onclick="enterMatchUsersPage()" style="width:100%;position:absolute;top:125px">匹配人列表</button> --> 
 		
-		<!-- CP容器的HTLM标范,不要删,用于css调试 -->
-		<div id="cp-show" style="position:fixed; top:230px;height:60%; width:100%;overflow-x:hidden;">
-		<div id="cp-container" style="/*  position:fixed; */ width:100%;">
-			<!-- <div class="cp" id="cpid1" class="selected">CP111111111	</div>-->
-			<!-- <div class="cp" id="cpid2" class="unselected">CP2222222222			</div>-->
-			<!-- <div class="cp" id="cpid3" class="unselected">CP3333333			</div>-->
-		</div> <!-- END of CP容器的HTLM标范,不要删,用于css调试 -->
+		<div class="tag-container">
 		
-		<div style="width:100%;height:23%;"></div>
-		<!-- start: 叶夷  2017.06.15  添加一个按钮，点击后通过已定义的接口向后台请求一组标签，后台返回后将标签显示出来。点击后继续请求下一页。-->
-		<button id="request_cp" type="button" onclick="requestCP(userId,requestCPNum,(requestCPNum*(currentRequestedCPPage++)))" style="width:100%;">请求标签</button>
-		<!-- end: 叶夷  -->
-		</div>
+			<!-- 装"推荐标签"四个字的容器 -->
+			<div class="othertagtext">推荐标签</div>
 		
-		<!--2017.07.04  叶夷   匹配人列表 -->
+			<!-- CP容器的HTLM标范,不要删,用于css调试 -->
+			<div id="cp-show" class="othertag">
+				<div id="cp-container" style="/*  position:fixed; */ width:100%;">
+				<!-- <div class="cp" id="cpid1" class="selected">CP111111111	</div>-->
+				<!-- <div class="cp" id="cpid2" class="unselected">CP2222222222			</div>-->
+				<!-- <div class="cp" id="cpid3" class="unselected">CP3333333			</div>-->
+				</div> <!-- END of CP容器的HTLM标范,不要删,用于css调试 -->
+		
+				<div style="width:100%;height:23%;"></div>
+				<!-- start: 叶夷  2017.06.15  添加一个按钮，点击后通过已定义的接口向后台请求一组标签，后台返回后将标签显示出来。点击后继续请求下一页。-->
+				<button id="request_cp" type="button" onclick="requestCP(userId,requestCPNum,(requestCPNum*(currentRequestedCPPage++)))" style="width:100%;display:none;">请求标签</button>
+				<!-- end: 叶夷  -->
+			</div>
+		
+			<!-- 装"为你匹配的人"文字的容器 -->
+			<div class="match_userstext">为你匹配的人</div>
+		
+			<!--2017.07.04  叶夷   匹配人列表 -->
 			<div class="match_users" id="match_users">
 			
 			</div>
+		</div>
+		
+		<!-- "聊天"文字容器 -->
+		<div class="enterdialogList" onclick="EnterdialogList()">
+			聊天(4条未读)
+		</div>
 		
 	</div> <!--End of <div id="showatloaded" class="showatloaded"> -->
 	
@@ -131,7 +155,7 @@
 			requestCP(userId,requestCPNum,++currentRequestedCPPage);
 			
 			//2017.07.04  叶夷  
-			//addMPData();//匹配人列表测试
+			addMPData();//匹配人列表测试
 			//requestTopMatchedUsers(userId,requestTopMUNum);//请求用户匹配缩略表,不能放在这里，因为不能同时请求,等请求cp返回且显示之后再请求这个方法，所以此方法放在responseToCPRequest(CP_list)中
 			
 			//$("#account").show();
