选中标签和添加标签功能完善

--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -140,7 +140,7 @@
 			showLoadingtext(); //显示"正在.."文字
 			$("#logging").hide(); //0110  这个logging可以完全去掉.
 			$("#return").click(function() {//1.11 F 修改
-				openWin('topics_page', 'topics_page/topics_page.html', '');//?0110 todo openwin方法要重新定义. index.html暂时没移动
+				openWin('main_page', 'main_page/main_page.html', '');//?0110 todo openwin方法要重新定义. index.html暂时没移动
 			});
 			readXuntaConfigXml();//读取本地xunta-config.xml,为某些全局变量赋值.
 			setPageTitle();//获得domain之后才能执行这一句.
