--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -50,7 +50,7 @@
 			
 			<!-- 我的标签 -->
 			<div class="mytag-container" id="mytag-container">
-				<div class="addtagimg" onclick="addTag()"><img src="../image/add_tag.png"></div>
+				<div class="addtagimg" id="addtagimg" onclick="addTag()"><img src="../image/add_tag.png"></div>
 				<!--  <div class="mytag"><img src="../image/acclaim-50x173.png"><span>90后</span></div>-->
 			</div>
 		</div>
@@ -158,7 +158,8 @@
 			addMPData();//匹配人列表测试
 			//requestTopMatchedUsers(userId,requestTopMUNum);//请求用户匹配缩略表,不能放在这里，因为不能同时请求,等请求cp返回且显示之后再请求这个方法，所以此方法放在responseToCPRequest(CP_list)中
 			
-			//$("#account").show();
+			//2017.08.09  叶夷  显示我的标签
+			requestMyCP();
 		}
 		
 		
