选中标签之后此标签不能点击，取消次标签重新绑定点击事件

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -87,10 +87,10 @@
 			</div>
 		
 			<!-- 装"为你匹配的人"文字的容器 -->
-			<div class="match_userstext">为你匹配的人</div>
+			<div class="match_userstext" >为你匹配的人</div>
 		
 			<!--2017.07.04  叶夷   匹配人列表 -->
-			<div class="match_users" id="match_users">
+			<div class="match_users" id="match_users" onclick="enterMatchUsersPage()">
 			
 			</div>
 		</div>
