--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -82,16 +82,28 @@
 		
 				<div style="width:100%;height:23%;"></div>
 				<!-- start: 叶夷  2017.06.15  添加一个按钮，点击后通过已定义的接口向后台请求一组标签，后台返回后将标签显示出来。点击后继续请求下一页。-->
-				<button id="request_cp" type="button" onclick="requestCP(userId,requestCPNum,(requestCPNum*(currentRequestedCPPage++)))" style="width:100%;display:none;">请求标签</button>
-				<!-- end: 叶夷  -->
+				<div class="getmoretopics cursor" id="request_cp" onclick="requestCP(userId,requestCPNum,(requestCPNum*(currentRequestedCPPage++)))">
+					<div>
+						+
+					</div>
+					<div>
+						更多标签
+					</div>
+				</div>
+				
+				<!--<button id="request_cp" type="button" onclick="requestCP(userId,requestCPNum,(requestCPNum*(currentRequestedCPPage++)))" style="width:100%;display:none;">请求标签</button>
+				 end: 叶夷  -->
 			</div>
 		
 			<!-- 装"为你匹配的人"文字的容器 -->
 			<div class="match_userstext" >为你匹配的人</div>
 		
 			<!--2017.07.04  叶夷   匹配人列表 -->
-			<div class="match_users" id="match_users" onclick="enterMatchUsersPage()">
+			<div class="matchUserList">
+				<div class="match_users" id="match_users">
 			
+				</div>
+				<div class="enterMatchUserList" onclick="enterMatchUsersPage()"><img src="../image/u423.png"></div>
 			</div>
 		</div>
 		
