--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.html
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.html
@@ -23,7 +23,35 @@
 			<div class="_closeBtn" onclick="closeBtn()"><img src="../image/close.png" ></div>
 		</div>
 		
-		
+		<div class="showMatchUsers" id="showMatchUsers">
+			<!-- 2017.08.15  叶夷   一个匹配人 
+			<div class="matchUser" id="matchUser">
+				<div class="userimg">
+					<img id="user_img" src="http://www.mxunta.so:80/xunta-web/useravatar/thumb_img_804622010041896960/jpg/image" >
+					<div class="username" id="username">叶汉良</div>
+				</div>
+				<div class="userTags">
+					<div class="userTag">核武器</div>
+					<div class="userTag">核武器</div>
+					<div class="userTag">核武器</div>
+					<div class="userTag">核武器</div>
+					<div class="userTag">核武器</div>
+					<div class="userTag">核武器</div>
+					<div class="userTag">核武器</div>
+					<div class="userTag">核武器</div>
+					<div class="userTag">核武器</div>
+					<div class="userTag">核武器</div>
+					<div class="userTag">核武器</div>
+					<div class="userTag">核武器</div>
+					<div class="userTag">核武器</div>
+				</div>
+				<div class="sendMsg">
+					发消息
+				</div>
+			</div>-->
+			
+			
+		</div>
 	</body>
 	<script type="text/javascript" src="../script/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="../script/common-xunta.js"></script>
@@ -56,6 +84,9 @@
             _topicPageSign = Parameter.topicPageSign;
             
             execRoot("setCurrentPageId('matchUsers_page')");
+            
+            //2017.08.15 叶夷   显示匹配列表详细信息
+            showMatchUsers();
         }
 		
 	</script>
