聊天自己发送信息时加上跳豆，当服务器返回时前端才显示发送成功

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -189,8 +189,8 @@
         		var msgId = new Date().getTime();				//生成临时发言id.
         		var myOrOther;
         		if (userId === respondeUserId) {
-        			window_id=obj.to_user_info;
-        			var msgId=1;
+        			window_id=obj.window_id;
+        			var msgId=obj.handler;
         			var str = "judgeSelfPosterReturnOrOthers('" + window_id + "','" + msgId + "','" + postTimeLong +"','" +postTimeStr +"')";
         		    execRoot(str);
             	} else { 
