--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -31,41 +31,29 @@
 			<div class="header-container">
 				<!--头像-->
 				<div class="userimg">
-					<img id="topic_img" src="" onclick="openHomePage()" />
+					<img id="topic_img" src="" onclick="" />
 				</div>
-				
-				<!-- 名字 -->
-				<div class="webname">
-				wolf
-				</div>
-				<!-- 信号 -->
-				<div id="showonlineoffline">
-					<img src="../image/signal-gray.png" onclick="wsConnect()">
-				</div>
-				<!-- 重新登录-->
-				<div id="showouseroprate">
-					<img src="../image/exit.png" onclick="logOff()">
-				</div>
+				<!--2017.07.04  叶夷   匹配人列表 -->
+				<div class="mu" id="mu1" style="left: 186px;width: 35px;height: 35px;top: 76px;"></div>
+    			<div class="mu" id="mu2" style="left: 225px;width: 33px;height: 33px;top: 84px;"></div>
+    			<div class="mu" id="mu3" style="left: 262px;width: 31px;height: 31px;top: 86px;"></div>
+    			<div class="mu" id="mu4" style="left: 297px;width: 29px;height: 29px;top: 84px;"></div>
+    			<div class="mu" id="mu5" style="left: 328px;width: 27px;height: 27px;top: 74px;"></div>
+    			<div class="mu" id="mu6" style="left: 342px;width: 25px;height: 25px;top: 48px;"></div>
+    			<div class="mu" id="mu7" style="left: 345px;width: 23px;height: 23px;top: 22px;"></div>
+    			<div class="mu" id="mu8" style="left: 329px;width: 21px;height: 21px;top: 4px;"></div>
+    			<div class="mu" id="mu9" style="left: 306px;width: 19px;height: 19px;top: 1px;"></div>
+    			<div class="mu" id="mu10" style="left: 286px;width: 17px;height: 17px;top: 4px;"></div>
 			</div>
 			
 			<!-- 我的标签 -->
-			<div class="mytag-container" id="mytag-container">
+			<div class="mytag-outer">
+				<div class="mytag-container" id="mytag-container">
 				<div class="addtagimg" id="addtagimg" onclick="addTag()"><img src="../image/add_tag.png"></div>
 				<!--  <div class="mytag"><img src="../image/acclaim-50x173.png"><span>90后</span></div>-->
+				</div>
 			</div>
 		</div>
-		
-		<!--2017.07.19  叶夷  聊天按钮
-		<button type="button" onclick="enterDialogPage()" style="width:100%;position:absolute;top:150px">聊天</button> -->
-		
-		<!--2017.07.26  叶夷  聊天列表
-		<button type="button" onclick="EnterdialogList()" style="width:100%;position:absolute;top:175px">聊天列表页</button> -->
-		
-		<!--2017.07.27  叶夷  添加标签按钮
-		<button type="button" onclick="addTag()" style="width:100%;position:absolute;top:200px">添加标签按钮</button>-->
-		
-		<!--2017.08.07  叶夷  匹配人列表
-		<button type="button" onclick="enterMatchUsersPage()" style="width:100%;position:absolute;top:125px">匹配人列表</button> --> 
 		
 		<div class="tag-container">
 		
@@ -94,17 +82,7 @@
 				<!--<button id="request_cp" type="button" onclick="requestCP(userId,requestCPNum,(requestCPNum*(currentRequestedCPPage++)))" style="width:100%;display:none;">请求标签</button>
 				 end: 叶夷  -->
 			</div>
-		
-			<!-- 装"为你匹配的人"文字的容器 -->
-			<div class="match_userstext" >为你匹配的人</div>
-		
-			<!--2017.07.04  叶夷   匹配人列表 -->
-			<div class="matchUserList">
-				<div class="match_users" id="match_users">
 			
-				</div>
-				<div class="enterMatchUserList" onclick="enterMatchUsersPage()"><img src="../image/u423.png"></div>
-			</div>
 		</div>
 		
 		<!-- "聊天"文字容器 -->
@@ -149,12 +127,13 @@
 			retrievePageParams(pageParamsStr); 
 			prepareTopicsPage();
 			setRootVars();
-			//showCP();
-			//wsConnect();
 			
 			//叶夷 2017.06.15  我觉得这里应该是++才能体现出这个次数的效果
 			//requestCP(userId,requestCPNum,currentRequestedCPPage+1);
 			requestCP(userId,requestCPNum,++currentRequestedCPPage);
+			
+			//2017.08.23 叶夷   匹配人位置根据屏幕调整
+			showMatchedUsers();
 			
 			//2017.07.04  叶夷  
 			addMPData();//匹配人列表测试
@@ -162,9 +141,6 @@
 			
 			//2017.08.09  叶夷  显示我的标签
 			requestMyCP();
-			
-			/* //2017.08.15 显示未读消息
-			showUnreadNum(); */
 			
 			chat.init(userId,recevier);//注册用户，及用记接收消息的函数
 		}
@@ -272,8 +248,16 @@
 				$("#imageundertopiclist").fadeIn(1500);//延迟并缓慢显示背景图片.
 			}, 1000);
 			
+			//2017.08.23 叶夷   我的头像位置适配
+			var headerContainerHeight=$(".header-container").css("height");
+			var userImgHeight=$(".userimg").css("height");
+			var userImgMarginTop=parseInt(headerContainerHeight)-parseInt(userImgHeight);
+			$(".userimg").css("margin-top", userImgMarginTop+"px");
 			
-			
+			//2017.08.23 叶夷   "聊天"二字垂直居中
+			var enterdialogList=$(".enterdialogList");
+			var enterdialogListHeight=parseInt(enterdialogList.css("height"));
+			enterdialogList.css("line-height",enterdialogListHeight+"px");
 			
 		}
 
