调整"我的标签"样式

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -58,7 +58,7 @@
 			<!-- 我的标签 -->
 			<div class="mytag-outer">
 				<div class="mytag-container" id="mytag-container">
-				<div class="addtagimg" id="addtagimg" onclick="addTag()"><img src="../image/add_tag.png"></div>
+				<div class="mytag add" id="addtag" onclick="addTag()">+</div>
 				<!--  <div class="mytag"><img src="../image/acclaim-50x173.png"><span>90后</span></div>-->
 				</div>
 			</div>
