--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -67,7 +67,7 @@
 			</div>
 		</div>
 		
-		<div class="tag-container">
+		<div class="tag-container" id="tag-container">
 			<!-- CP容器的HTLM标范,不要删,用于css调试 -->
 			<div id="cp-show" class="othertag">
 				<div id="cp-container" style="/*  position:fixed; */ width:100%;">
