--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -129,6 +129,7 @@
 		var requestTopMUNum=10;//每次请求用户匹配排名数量
 		var currentRequestedCPPage = 0; //page指第几次请求到的返回结果集.0表示还没有请求到.请求成功后,要加1. 
 		var unreadObjList=new Array();//2017.08.16 为了装所有的未读信息，然后将数组传给聊天列表
+		var firstRequestTopMatchedUsers=true;//2017.09.04  叶夷      判断是否是第一次请求匹配列表
 
 		function start(pageParamsStr) {//web:在openWin时通过ready后回调,再跨页执行方式来启动的第一个方法.
 			//1。11 新增，   显示Log日志后点击return事件返回到话题列表页时是没有参数的，data为''，所以下面加个判断条件，为''就结束该方法  FANG
