1.加上一个打开聊天列表的临时按钮  2.在请求匹配列表，请求cp，选择cp这几个接口的请求和后台返回的时候都加上了响应时间的日志

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -93,10 +93,10 @@
 			
 		</div>
 		
-		<!-- "聊天"文字容器
+		<!-- "聊天"文字容器-->
 		<div class="enterdialogList" id="enterdialogList" onclick="EnterdialogList()">
-			聊天
-		</div> -->
+			聊天列表
+		</div> 
 		
 	</div> <!--End of <div id="showatloaded" class="showatloaded"> -->
 	
