完善选择标签功能的性能测试

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -105,6 +105,10 @@
 		<div onclick="testSelectTag()" style="position: absolute;top: 26px;left: 100px;background: #f1f1f1;">
 			选中标签测试
 		</div> 
+		<!-- 选中标签性能测试停止按钮-->
+		<div onclick="cleartimeout()" style="position: absolute;top: 52px;left: 100px;background: #f1f1f1;">
+			选中标签测试停止
+		</div>
 		
 	</div> <!--End of <div id="showatloaded" class="showatloaded"> -->
 	
