匹配人排名改变动画效果尝试

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -40,7 +40,7 @@
 				
 				<!--头像-->
 				<div class="userimg">
-					<img id="topic_img" src="" onclick="" />
+					<img id="topic_img" src="" onclick="addMPData()" />
 					<div class="username" id="username"></div>
 				</div>
 				
