--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -101,14 +101,14 @@
 		<div class="enterdialogList" id="enterdialogList" onclick="EnterdialogList()">
 			聊天列表
 		</div>
-		<!-- 选中标签性能测试按钮-->
+		<!-- 选中标签性能测试按钮
 		<div onclick="testSelectTag()" style="position: absolute;top: 26px;left: 100px;background: #f1f1f1;">
 			选中标签测试
-		</div>
-		<!-- 选中标签性能测试停止按钮-->
+		</div>-->
+		<!-- 选中标签性能测试停止按钮
 		<div onclick="cleartimeout()" style="position: absolute;top: 52px;left: 100px;background: #f1f1f1;">
 			选中标签测试停止
-		</div>
+		</div>-->
 		
 	</div> <!--End of <div id="showatloaded" class="showatloaded"> -->
 	
