前端样式修改，包括我的标签，推荐标签，聊天列表图标，背景图片。

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -30,12 +30,12 @@
 		<div id="top-container" class="top-container">
 			<div class="header-container" id="header-container">
 				<!-- 重新登录-->
-				<div id="showouseroprate">
+				<!--div id="showouseroprate">
 					<img src="../image/exit.png" onclick="logOff()">
-				</div>
+				</div-->
 				<!-- 信号 -->
 				<div id="showonlineoffline">
-					<img src="../image/signal-gray.png" onclick="wsConnect()">
+					<img src="../image/dot-gray.png" onclick="wsConnect()">
 				</div>
 				
 				<!--头像-->
@@ -99,7 +99,7 @@
 		
 		<!-- "聊天"文字容器-->
 		<div class="enterdialogList" id="enterdialogList" onclick="EnterdialogList()">
-			聊天列表
+		<img src="../image/new-msg-3.png" />
 		</div>
 		<!-- 选中标签性能测试按钮
 		<div onclick="testSelectTag()" style="position: absolute;top: 26px;left: 100px;background: #f1f1f1;">
