--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -26,7 +26,7 @@
 	<!--<img id="imageundertopiclist" src="image/windblowgrass-2.gif"/>-->
 
 	<div id="showatloaded" class="showatloaded">
-
+		
 		<div id="top-container" class="top-container">
 			<div class="header-container" id="header-container">
 				<!-- 重新登录-->
@@ -72,9 +72,11 @@
 		</div>
 		
 		<div class="tag-container" id="tag-container">
+		<img id="background-rightbar" src="../image/background1-rightbar.jpg"><!--用来覆盖右边的滚动条 -->
 			<!-- CP容器的HTLM标范,不要删,用于css调试 -->
 			<div id="cp-show" class="othertag">
 				<div id="cp-container" style="/*  position:fixed; */ width:100%;">
+				
 				<!-- <div class="cp" id="cpid1" class="selected">CP111111111	</div>-->
 				<!-- <div class="cp" id="cpid2" class="unselected">CP2222222222			</div>-->
 				<!-- <div class="cp" id="cpid3" class="unselected">CP3333333			</div>-->
