--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -40,7 +40,7 @@
 				
 				<!--头像-->
 				<div class="userimg">
-					<img id="topic_img" src="" onclick="" />
+					<img id="topic_img" src="" onclick="addMPData()" />
 					<div class="username" id="username"></div>
 				</div>
 				
@@ -106,7 +106,7 @@
 		<!-- 选中标签性能测试按钮
 		<div onclick="testSelectTag()" style="position: absolute;top: 26px;left: 100px;background: #f1f1f1;">
 			选中标签测试
-		</div> -->
+		</div>-->
 		<!-- 选中标签性能测试停止按钮
 		<div onclick="cleartimeout()" style="position: absolute;top: 52px;left: 100px;background: #f1f1f1;">
 			选中标签测试停止
