新增标签功能完成

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -235,6 +235,9 @@
                 		exec(window_id, "markSendPosterSuccess('" + msgId + "','" + postTimeLong +"','" +postTimeStr+"')");
             		} 
             	}
+        		
+        		//每次接收到消息消息列表置顶
+        		exec("dialoglist_page", "makeDialogListTop('" + respondeUserId +"')");
         };
         
         function sendmsg(toUserId,inputValue,handler){
