我的标签选择人数变化时显示也变化，这个功能实现

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -74,9 +74,9 @@
 			<div class="mytag-container" id="mytag-container">
 
 				<!-- <div class="mytag"><img src="../image/acclaim-50x173.png"><span>阿斯蒂芬8后</span></div> -->
-				<div class="mytag" id="addtag2" onclick="addTag()" style="width:86px;"> 万有引力 					
+				<!-- <div class="mytag" id="addtag2" onclick="addTag()" style="width:86px;"> 万有引力 					
 					<div class="mytag-selectednumber">123</div>
-				</div>
+				</div> -->
 				
 			</div>
 
