并发测试还没有实现

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -128,10 +128,10 @@
 		<div class="enterdialogList" id="enterdialogList" onclick="EnterdialogList()">
 		<img src="../image/new-msg-3.png" />
 		</div>
-		<!-- 选中标签性能测试按钮
-		<div onclick="testSelectTag()" style="position: absolute;top: 26px;left: 100px;background: #f1f1f1;">
-			选中标签测试
-		</div>-->
+		<!-- 选中标签并发websocket测试按钮 -->
+		<div onclick="requestUserIds()" style="position: absolute;top: 26px;left: 100px;background: #f1f1f1;z-index:999;">
+			并发测试按钮 
+		</div>
 		<!-- 选中标签性能测试停止按钮
 		<div onclick="cleartimeout()" style="position: absolute;top: 52px;left: 100px;background: #f1f1f1;">
 			选中标签测试停止
