解决移动端网页的问题：1.推荐标签高度太小 2.我的标签为0的时候加号不出现     接下来解决选择标签时黑布不能覆盖全屏幕的问题

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -72,7 +72,7 @@
 
 			<!-- 我的标签 -->
 			<div class="mytag-container" id="mytag-container">
-
+				<div style="width:37px;height:30px;line-height:28px;" onclick="addTag()" class="mytag add" id="addtag">+</div>
 				<!-- <div class="mytag"><img src="../image/acclaim-50x173.png"><span>阿斯蒂芬8后</span></div> -->
 				<!-- <div class="mytag" id="addtag2" onclick="addTag()" style="width:86px;"> 万有引力 					
 					<div class="mytag-selectednumber">123</div>
@@ -149,6 +149,8 @@
 	<script type="text/javascript" src="../script/popup.js"></script>
 	<script type="text/javascript" src="../script/popcontext.js"></script>
 	<script type="text/javascript" src="http://xunta.so:3000/javascripts/websocket.io.js"></script>
+	<!-- 这是为了移动端web的调试 -->
+	<script src="../script/debuggap.js" type="text/javascript"></script>
 	
 	
 	<script type="text/javascript">
