聊天列表页和对话页的样式调整. 将两个.properties文件列入忽略文件.

--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
@@ -22,10 +22,11 @@
     <body>
 		<!--div id="notification">通知栏</div-->
 		<div id="header">
-			<div id="goback" onclick="backBtn()"><img src="../image/goback5.png" /></div>
-			<div id="title" onclick="showWholeTitle()">[聊天页标题]	</div>
-			<!--<div id="moretodoicon" onclick="showMoreToDo()"><img src="../image/moretodo_18.png" />	</div>-->
-			<div class="_closeBtn" onclick="closeBtn()"><img src="../image/close.png" ></div>
+			<div id="title">
+			<div style="z-index:16;">LKJ;LKJ</div>
+			</div>
+<div id="goback" onclick="backBtn()"><img src="../image/goback6.png" /></div>
+				
 		</div>
 		
 		<!-- 共同选择过的cp -->
