--- a/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page.html
+++ b/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page.html
@@ -18,9 +18,8 @@
     <body>
 		<!--div id="notification">通知栏</div-->
 		<div id="header">
+			<div id="title">我的Ta们</div>
 			<div id="goback" onclick="backBtn()"><img src="../image/goback5.png" /></div>
-			<div id="title">[聊天列表页]	</div>
-			<div class="_closeBtn" onclick="closeBtn()"><img src="../image/close.png" ></div>
 		</div>
 		
 		<div id="dialog_list">
