--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -30,9 +30,9 @@
 		<div id="top-container" class="top-container">
 			<div class="header-container" id="header-container">
 			
-				<div id="open-matcheduserlist" >
+				<!-- div id="open-matcheduserlist" >
 					<img src="../image/timg-5.png" onclick="wsConnect()">
-				</div>
+				</div-->
 			
 			
 				<!-- 重新登录-->
