主要修改了放大圆, 自定义标签对话框的样式.

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -105,12 +105,7 @@
 				<div style="width:100%;height:23%;"></div>
 				<!-- start: 叶夷  2017.06.15  添加一个按钮，点击后通过已定义的接口向后台请求一组标签，后台返回后将标签显示出来。点击后继续请求下一页。-->
 				<div class="getmoretopics cursor" id="request_cp" onclick="requestCP(userId,requestCPNum,(requestCPNum*(currentRequestedCPPage++)))">
-					<div>
-						+
-					</div>
-					<div>
-						更多标签
-					</div>
+					<div>更多</div>
 				</div>
 				
 				<!--<button id="request_cp" type="button" onclick="requestCP(userId,requestCPNum,(requestCPNum*(currentRequestedCPPage++)))" style="width:100%;display:none;">请求标签</button>
